--- a/x-pack/plugins/integration_assistant/server/templates/package_readme.md.njk
+++ b/x-pack/plugins/integration_assistant/server/templates/package_readme.md.njk
@@ -47,10 +47,10 @@ Check the [setup guidelines](https://www.elastic.co/guide/en/integrations-develo
 
 #### Create a new integration from a Zip file (optional)
 1. In Kibana go to Management > Integrations.
-2. Select "Create new integration"
-3. Select "Upload it as a .zip"
-4. Upload the .zip 
-5. Select "Add to elastic"
+2. Select "Create new integration".
+3. Select "Upload it as a .zip".
+4. Upload the .zip.
+5. Select "Add to elastic".
 
 ### Install the integration
 1. In Kibana go to Management > Integrations.
