Apply suggestions from code review
Co-authored-by: Hannah Mudge <Heenawter@users.noreply.github.com>

--- a/src/plugins/dashboard/public/dashboard_container/component/grid/_dashboard_grid.scss
+++ b/src/plugins/dashboard/public/dashboard_container/component/grid/_dashboard_grid.scss
@@ -111,14 +111,16 @@
 
     .embPanel__hoverActionsWrapper {
       top: -$euiSizeXL;
-    }
 
-    .embPanel__hoverActionsLeft {
-      opacity: 1 !important;
-    }
+      .embPanel__hoverActionsLeft {
+        // ensure the drag icon stays visible as you drag
+        opacity: 1 !important;
+      }
 
-    .embPanel__hoverActionsRight {
-      opacity: 0 !important;
+      .embPanel__hoverActionsRight {
+        // hide all other actions while you drag
+        opacity: 0 !important;
+      }
     }
   }
 
