--- a/src/plugins/dashboard/public/dashboard_container/component/grid/_dashboard_panel.scss
+++ b/src/plugins/dashboard/public/dashboard_container/component/grid/_dashboard_panel.scss
@@ -5,6 +5,7 @@
   */
 
 .dshLayout--editing {
+   // change the style of the hover actions border to a dashed line in edit mode
   .embPanel__hoverActionsAnchor {
     .embPanel__hoverActionsWrapper {
       .embPanel__hoverActions {
