[ML] Improve tooltip display for smaller/responsive screens

--- a/x-pack/plugins/ml/public/application/components/chart_tooltip/_chart_tooltip.scss
+++ b/x-pack/plugins/ml/public/application/components/chart_tooltip/_chart_tooltip.scss
@@ -4,7 +4,8 @@
   transition: opacity $euiAnimSpeedNormal;
   pointer-events: none;
   user-select: none;
-  max-width: 512px;
+  max-width: max(512px, 90vw);
+  width: max-content;
 
   &__list {
     margin: $euiSizeXS;
