[Visualize Library] Replace vanilla CSS `visTooltip` EUI mixin with with EUI Sass variables

--- a/src/plugins/vis_types/vislib/public/vislib/components/tooltip/_tooltip.scss
+++ b/src/plugins/vis_types/vislib/public/vislib/components/tooltip/_tooltip.scss
@@ -1,12 +1,15 @@
 .visTooltip,
 .visTooltip__sizingClone {
-  @include euiToolTipStyle('s');
+  z-index: $euiZLevel9;
   visibility: hidden;
   pointer-events: none;
   position: fixed;
   max-width: $euiSizeXL * 10;
   overflow: hidden;
   padding: 0;
+  color: $euiColorGhost;
+  background-color: $euiColorFullShade;
+  border-radius: $euiBorderRadius;
 
   > :last-child {
     margin-bottom: $euiSizeS;
