[Unified Search] Remove `@euiFormControlDefaultShadow` / simplify CSS to `border-color`
- there's no need to use box-shadow to render a border - EuiBadges are all on `border` at this point / after the Emotion conversion

--- a/src/plugins/unified_search/public/filter_bar/filter_item/filter_item.scss
+++ b/src/plugins/unified_search/public/filter_bar/filter_item/filter_item.scss
@@ -6,23 +6,20 @@
 
 .euiBadge.globalFilterItem {
   line-height: $euiSize;
-  border: none;
   color: $euiTextColor;
   padding-top: calc($euiSizeM / 2) + 1px;
   padding-bottom: calc($euiSizeM / 2) + 1px;
   white-space: normal; /* 1 */
 
   &:not(.globalFilterItem-isDisabled) {
-    @include euiFormControlDefaultShadow;
-    & { // stylelint-disable-line no-duplicate-selectors
-      box-shadow: #{$euiFormControlBoxShadow}, inset 0 0 0 1px $kbnGlobalFilterItemBorderColor; // Make the actual border more visible
-    }
+    border-color: $kbnGlobalFilterItemBorderColor; // Make the actual border more visible
   }
 }
 
 .euiBadge.globalFilterItem-isDisabled {
   color: $euiColorDarkShade;
   background-color: transparentize($euiColorLightShade, .5);
+  border-color: transparent;
   text-decoration: line-through;
   font-weight: $euiFontWeightRegular;
 }
@@ -63,7 +60,7 @@
 
 .globalFilterItem-isExcluded {
   &:not(.globalFilterItem-isDisabled) {
-    box-shadow: #{$euiFormControlBoxShadow}, inset 0 0 0 1px $kbnGlobalFilterItemBorderColorExcluded;
+    border-color: $kbnGlobalFilterItemBorderColorExcluded;
 
     &::before {
       background-color: $kbnGlobalFilterItemPinnedColorExcluded;
