--- a/src/plugins/unified_search/public/filter_bar/filter_item/filter_item.scss
+++ b/src/plugins/unified_search/public/filter_bar/filter_item/filter_item.scss
@@ -7,8 +7,7 @@
 .euiBadge.globalFilterItem {
   line-height: $euiSize;
   color: $euiTextColor;
-  padding-top: calc($euiSizeM / 2) + 1px;
-  padding-bottom: calc($euiSizeM / 2) + 1px;
+  padding-block: $euiSizeM / 2;
   white-space: normal; /* 1 */
 
   &:not(.globalFilterItem-isDisabled) {
