--- a/src/plugins/unified_search/public/query_string_input/query_string_input.scss
+++ b/src/plugins/unified_search/public/query_string_input/query_string_input.scss
@@ -20,6 +20,10 @@
     border-bottom-right-radius: 0;
     border-bottom-left-radius: 0;
   }
+
+  >.euiFormControlLayoutIcons {
+    max-height: $euiFormControlHeight;
+  }
 }
 
 .kbnQueryBar__textarea {
