--- a/packages/kbn-search-index-documents/components/result/result.scss
+++ b/packages/kbn-search-index-documents/components/result/result.scss
@@ -1,18 +1,34 @@
-.resultField:nth-child(odd) {
-  background-color: $euiColorLightestShade;
-}
-
 .resultField {
-  padding: $euiSizeXS $euiSizeS;
+  padding: 0;
+  border-bottom: 1px solid $euiColorLightShade;
+  position: relative;
 
-  > .euiTableRowCell {
+  &:last-child {
+    border-bottom: none;
+  }
+
+  >.euiTableRow:hover {
+    background-color: $euiColorEmptyShade;
+  }
+
+  >.euiTableRowCell {
     border-top: none;
     border-bottom: none;
 
-    > .euiTableCellContent {
-      padding: $euiSizeXS;
+    >.euiTableCellContent {
+      padding: $euiSizeS;
+      font-family: $euiCodeFontFamily;
+      color: $euiColorMediumShade;
     }
   }
+}
+
+.ResultValue {
+  position: absolute;
+  right: 0;
+  top: 0;
+  background-color: $euiColorEmptyShade;
+  padding: $euiSizeS;
 }
 
 .resultExpandColumn {
